# charm_runner

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
charm_runner/: app.py  db.py  project.py
code_compass/: app.py  category.py  config.py  config.yaml  db.py  project.py
code_runner/: app.py  category.py  config.py  db.py  project.py  style.qss
code_runner/templates/: main.xml
