[tool.poetry]
name = "code-runner"
version = "0.1.0"
description = ""
authors = ["Roman <roman-right@protonmail.com>"]
readme = "README.md"
packages = [{ include = "code_runner" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
cookiecutter = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
code_runner = "code_runner.app:run"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
