[project]
name = "code-compass"
version = "0.1.2"
description = ""
authors = [
    { name = "Roman", email = "roman-right@protonmail.com" }
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "cookiecutter>=2.1.1,<3.0.0",
    "pyside6>=6.5.0,<7.0.0"
]

[project.scripts]
code-compass = "code_compass.app:run"

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''